凡ミス太郎

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 doctype html
 html
 	head
-		link(rel='stylesheet' href='')
+		link(rel='stylesheet' href='index.css')
 	body
 		script(src='index.js')
