--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,8 @@ doctype html
 html
 	head
 		link(rel='stylesheet' href='index.css')
+		script(src='../../node_modules/react/dist/react-with-addons.min.js')
+		script(src='../../node_modules/react-dom/dist/react-dom.min.js')
 	body
 		main
-		script #{locals.code}
 		script(src='index.js')
